--- a/src/main/resources/ehu/eus/chismosas/mastodonfx/presentation/profile-window.fxml
+++ b/src/main/resources/ehu/eus/chismosas/mastodonfx/presentation/profile-window.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
@@ -8,12 +9,14 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="756.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="756.0" style="-fx-background-color: #18181b;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <Pane prefHeight="318.0" prefWidth="374.0" style="-fx-background-color: #2f3238;" BorderPane.alignment="CENTER">
          <children>
@@ -23,10 +26,10 @@
       </Pane>
    </center>
    <top>
-      <Pane prefHeight="82.0" prefWidth="559.0" style="-fx-background-color: #18181b;" BorderPane.alignment="CENTER">
+      <Pane prefHeight="82.0" prefWidth="559.0" BorderPane.alignment="CENTER">
          <children>
             <TextField fx:id="searcher" layoutX="550.0" layoutY="29.0" prefHeight="11.0" prefWidth="196.0" promptText="Search" />
-            <ImageView id="bellImg" fitHeight="55.0" fitWidth="53.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="bellImg" fitHeight="55.0" fitWidth="53.0" layoutX="6.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@icons/logo.png" />
                </image>
@@ -34,21 +37,40 @@
          </children>
       </Pane>
    </top>
-   <left>
-      <Pane prefHeight="318.0" prefWidth="153.0" style="-fx-background-color: #18181b;" BorderPane.alignment="CENTER">
+   <right>
+      <Pane prefHeight="318.0" prefWidth="216.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="notifBtn" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="15.0" layoutY="18.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: #18181b;" text="Notifications" textFill="WHITE">
+            <Line endX="43.49993896484375" endY="-204.39999389648438" layoutX="-43.0" layoutY="123.0" startX="43.49995422363281" startY="195.60000610351562" stroke="#797979" />
+            <TextArea fx:id="newToot" layoutX="8.0" layoutY="106.0" prefHeight="158.0" prefWidth="200.0" />
+         </children>
+      </Pane>
+   </right>
+   <left>
+      <GridPane BorderPane.alignment="CENTER">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="33.5" minWidth="26.5" prefWidth="33.5" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Button fx:id="notifBtn" alignment="BASELINE_LEFT" contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: #18181b;" text="Notifications" textFill="WHITE" GridPane.columnIndex="1">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Line endX="43.49993896484375" endY="-204.39999389648438" layoutX="110.0" layoutY="123.0" startX="43.49995422363281" startY="195.60000610351562" stroke="#797979" />
-            <ImageView id="bellImg" fitHeight="22.0" fitWidth="22.0" layoutX="20.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="bellImg" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@icons/bell.png" />
                </image>
             </ImageView>
-            <Button fx:id="profileBtn" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="12.0" layoutY="61.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: #18181b;" text="Profile" textFill="WHITE">
+            <Button fx:id="profileBtn" alignment="BASELINE_LEFT" contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: #18181b;" text="Profile" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font size="14.0" />
                </font>
@@ -56,60 +78,55 @@
                   <DropShadow />
                </effect>
             </Button>
-            <ImageView id="bellImg" fx:id="profImg" fitHeight="22.0" fitWidth="22.0" layoutX="18.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="bellImg" fx:id="profImg" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
                <image>
                   <Image url="@icons/user.png" />
                </image>
             </ImageView>
-            <Button fx:id="msgBtn" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="14.0" layoutY="102.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: #18181b;" text="Messages" textFill="WHITE">
+            <Button fx:id="msgBtn" alignment="BOTTOM_LEFT" contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: #18181b;" text="Messages" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <ImageView id="bellImg" fx:id="msgImg" fitHeight="37.0" fitWidth="51.0" layoutX="12.0" layoutY="99.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="bellImg" fx:id="msgImg" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
                <image>
                   <Image url="@icons/msg.png" />
                </image>
             </ImageView>
-            <Button fx:id="tlBtn" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="14.0" layoutY="141.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="122.0" style="-fx-background-color: #18181b;" text="Explore" textFill="WHITE">
+            <Button fx:id="tlBtn" alignment="BASELINE_LEFT" contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="30.0" prefWidth="122.0" style="-fx-background-color: #18181b;" text="Explore" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <ImageView id="bellImg" fx:id="tlImg" fitHeight="22.0" fitWidth="22.0" layoutX="20.0" layoutY="145.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="bellImg" fx:id="tlImg" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
                <image>
                   <Image url="@icons/explore.png" />
                </image>
             </ImageView>
-            <Button fx:id="bookmarksBtn" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="14.0" layoutY="180.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="122.0" style="-fx-background-color: #18181b;" text="Bookmarks" textFill="WHITE">
+            <Button fx:id="bookmarksBtn" alignment="BASELINE_LEFT" contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="30.0" prefWidth="122.0" style="-fx-background-color: #18181b;" text="Bookmarks" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <ImageView id="bellImg" fx:id="bookmarksImg" fitHeight="19.0" fitWidth="33.0" layoutX="20.0" layoutY="184.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="bellImg" fx:id="bookmarksImg" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="4">
                <image>
                   <Image url="@icons/bookmark.png" />
                </image>
             </ImageView>
-            <Button fx:id="favsBtn" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="12.0" layoutY="220.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: #18181b;" text="Favourites" textFill="WHITE">
+            <Button fx:id="favsBtn" alignment="BASELINE_LEFT" contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: #18181b;" text="Favourites" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <ImageView id="bellImg" fx:id="favsImg" fitHeight="24.0" fitWidth="33.0" layoutX="17.0" layoutY="221.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="bellImg" fx:id="favsImg" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="5">
                <image>
                   <Image url="@icons/fav.png" />
                </image>
             </ImageView>
          </children>
-      </Pane>
+         <BorderPane.margin>
+            <Insets left="20.0" />
+         </BorderPane.margin>
+      </GridPane>
    </left>
-   <right>
-      <Pane prefHeight="318.0" prefWidth="216.0" style="-fx-background-color: #18181b;" BorderPane.alignment="CENTER">
-         <children>
-            <Line endX="43.49993896484375" endY="-204.39999389648438" layoutX="-43.0" layoutY="123.0" startX="43.49995422363281" startY="195.60000610351562" stroke="#797979" />
-            <TextArea fx:id="newToot" layoutX="8.0" layoutY="106.0" prefHeight="158.0" prefWidth="200.0" />
-         </children>
-      </Pane>
-   </right>
 </BorderPane>
