--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
@@ -1,28 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<SplitPane fx:id="splitPane" dividerPositions="0.19095477386934673" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-   <items>
-      <Pane prefHeight="173.0" prefWidth="598.0" />
-      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="270.0" prefWidth="600.0">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="113.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="487.0" minWidth="10.0" prefWidth="487.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints maxHeight="268.0" minHeight="10.0" prefHeight="168.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="188.0" minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-            <Label fx:id="date" text="1:35 21 de enero de 2023" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-            <Label fx:id="content" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam placerat ex tincidunt elementum cursus. Integer vel metus eu metus ultrices suscipit non facilisis erat. Sed tristique justo vitae magna sagittis aliquam vitae a ligula. Morbi commodo pellentesque lorem sit amet posuere. Mauris bibendum ullamcorper dolor vitae imperdiet. Nulla nec nisi lectus." wrapText="true" GridPane.columnSpan="2" />
-         </children>
-      </GridPane>
-   </items>
-</SplitPane>
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="340.0"
+          xmlns="http://javafx.com/javafx/19">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="70.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints fillHeight="false" maxHeight="1.7976931348623157E308" minHeight="24.999998092651367"
+                        prefHeight="46.33333206176758" vgrow="NEVER"/>
+        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="86.66666793823242"
+                        vgrow="SOMETIMES"/>
+    </rowConstraints>
+    <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER"
+               GridPane.rowSpan="2" GridPane.valignment="TOP">
+        <GridPane.margin>
+          <Insets bottom="12.0" left="12.0" right="12.0" top="12.0"/>
+        </GridPane.margin>
+    </ImageView>
+    <HBox alignment="CENTER_LEFT" spacing="5.0" GridPane.columnIndex="1">
+        <opaqueInsets>
+            <Insets/>
+        </opaqueInsets>
+        <Label text="Display Name">
+            <font>
+                <Font name="System Bold" size="16.0"/>
+            </font>
+        </Label>
+        <Label text="\@username" textFill="#000000c2">
+            <font>
+                <Font size="16.0"/>
+            </font>
+        </Label>
+        <Label alignment="TOP_LEFT" text="date" textFill="#000000c2">
+            <font>
+                <Font size="14.0"/>
+            </font>
+        </Label>
+    </HBox>
+    <Label text="Libero totam aperiam numquam ea vitae ipsum. Expedita ipsum quibusdam velit qui quo autem molestiae quia. Debitis voluptatibus voluptatem qui error ad hic. Quo commodi aliquid eius. Libero totam aperiam numquam ea vitae ipsum. Expedita ipsum quibusdam velit qui quo autem molestiae quia. Debitis voluptatibus voluptatem qui error ad hic. Quo commodi aliquid eius. Libero totam aperiam numquam ea vitae ipsum. Expedita ipsum quibusdam velit qui quo autem molestiae quia. Debitis voluptatibus voluptatem qui error ad hic. Quo commodi aliquid eius. "
+           wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP"
+           GridPane.vgrow="ALWAYS">
+        <GridPane.margin>
+          <Insets bottom="15.0"/>
+        </GridPane.margin>
+        <font>
+          <Font size="13.0"/>
+        </font>
+    </Label>
+</GridPane>
