--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
@@ -9,52 +9,46 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="340.0"
-          xmlns="http://javafx.com/javafx/19">
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="340.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="70.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="70.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints fillHeight="false" maxHeight="1.7976931348623157E308" minHeight="24.999998092651367"
-                        prefHeight="46.33333206176758" vgrow="NEVER"/>
-        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="86.66666793823242"
-                        vgrow="SOMETIMES"/>
+        <RowConstraints fillHeight="false" maxHeight="1.7976931348623157E308" minHeight="24.999998092651367" prefHeight="46.33333206176758" vgrow="NEVER" />
+        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="86.66666793823242" vgrow="SOMETIMES" />
     </rowConstraints>
-    <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER"
-               GridPane.rowSpan="2" GridPane.valignment="TOP">
+    <ImageView fx:id="avatar" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowSpan="2" GridPane.valignment="TOP">
         <GridPane.margin>
-          <Insets bottom="12.0" left="12.0" right="12.0" top="12.0"/>
+          <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
         </GridPane.margin>
     </ImageView>
     <HBox alignment="CENTER_LEFT" spacing="5.0" GridPane.columnIndex="1">
         <opaqueInsets>
-            <Insets/>
+            <Insets />
         </opaqueInsets>
-        <Label text="Display Name">
+        <Label fx:id="displayName" text="Display Name">
             <font>
-                <Font name="System Bold" size="16.0"/>
+                <Font name="System Bold" size="16.0" />
             </font>
         </Label>
-        <Label text="\@username" textFill="#000000c2">
+        <Label fx:id="userName" text="\@username" textFill="#000000c2">
             <font>
-                <Font size="16.0"/>
+                <Font size="16.0" />
             </font>
         </Label>
-        <Label alignment="TOP_LEFT" text="date" textFill="#000000c2">
+        <Label fx:id="date" alignment="TOP_LEFT" text="date" textFill="#000000c2">
             <font>
-                <Font size="14.0"/>
+                <Font size="14.0" />
             </font>
         </Label>
     </HBox>
-    <Label text="Libero totam aperiam numquam ea vitae ipsum. Expedita ipsum quibusdam velit qui quo autem molestiae quia. Debitis voluptatibus voluptatem qui error ad hic. Quo commodi aliquid eius. Libero totam aperiam numquam ea vitae ipsum. Expedita ipsum quibusdam velit qui quo autem molestiae quia. Debitis voluptatibus voluptatem qui error ad hic. Quo commodi aliquid eius. Libero totam aperiam numquam ea vitae ipsum. Expedita ipsum quibusdam velit qui quo autem molestiae quia. Debitis voluptatibus voluptatem qui error ad hic. Quo commodi aliquid eius. "
-           wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP"
-           GridPane.vgrow="ALWAYS">
+    <Label fx:id="content" text="Libero totam aperiam numquam ea vitae ipsum. Expedita ipsum quibusdam velit qui quo autem molestiae quia. Debitis voluptatibus voluptatem qui error ad hic. Quo commodi aliquid eius. Libero totam aperiam numquam ea vitae ipsum. Expedita ipsum quibusdam velit qui quo autem molestiae quia. Debitis voluptatibus voluptatem qui error ad hic. Quo commodi aliquid eius. Libero totam aperiam numquam ea vitae ipsum. Expedita ipsum quibusdam velit qui quo autem molestiae quia. Debitis voluptatibus voluptatem qui error ad hic. Quo commodi aliquid eius. " wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
         <GridPane.margin>
-          <Insets bottom="15.0"/>
+          <Insets bottom="15.0" />
         </GridPane.margin>
         <font>
-          <Font size="13.0"/>
+          <Font size="13.0" />
         </font>
     </Label>
 </GridPane>
