--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -10,20 +11,16 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
 
-<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="340.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="186.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="70.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints fillHeight="false" maxHeight="1.7976931348623157E308" minHeight="24.999998092651367" prefHeight="46.33333206176758" vgrow="NEVER" />
-        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="86.66666793823242" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="94.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
     </rowConstraints>
-    <ImageView fx:id="avatar" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowSpan="2" GridPane.valignment="TOP">
-        <GridPane.margin>
-          <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
-        </GridPane.margin>
-    </ImageView>
     <HBox alignment="CENTER_LEFT" spacing="5.0" GridPane.columnIndex="1">
         <opaqueInsets>
             <Insets />
@@ -52,4 +49,56 @@
          <Insets bottom="10.0" right="10.0" />
       </GridPane.margin>
    </WebView>
+   <ImageView fx:id="bookmarkBtn" fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="LEFT" GridPane.rowIndex="2">
+      <GridPane.margin>
+         <Insets />
+      </GridPane.margin>
+      <image>
+         <Image url="@icons/bookmark2.png" />
+      </image>
+   </ImageView>
+   <ImageView fx:id="likeBtn" fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <image>
+         <Image url="@icons/like.png" />
+      </image>
+      <GridPane.margin>
+         <Insets left="10.0" />
+      </GridPane.margin>
+   </ImageView>
+   <Label fx:id="like" prefHeight="17.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <GridPane.margin>
+         <Insets left="50.0" />
+      </GridPane.margin>
+   </Label>
+   <ImageView fx:id="retweetBtn" fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+      <image>
+         <Image url="@icons/retweet.png" />
+      </image>
+      <GridPane.margin>
+         <Insets right="50.0" />
+      </GridPane.margin>
+   </ImageView>
+   <Label fx:id="retweet" prefHeight="17.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+      <GridPane.margin>
+         <Insets left="30.0" />
+      </GridPane.margin>
+   </Label>
+   <ImageView fx:id="commentBtn" fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+      <image>
+         <Image url="@icons/comment.png" />
+      </image>
+      <GridPane.margin>
+         <Insets right="50.0" />
+      </GridPane.margin>
+   </ImageView>
+   <Label fx:id="comment" prefHeight="17.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+      <GridPane.margin>
+         <Insets right="15.0" />
+      </GridPane.margin>
+   </Label>
+   <ImageView fx:id="avatar" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+      <GridPane.margin>
+         <Insets bottom="90.0" left="5.0" />
+      </GridPane.margin>
+   </ImageView>
 </GridPane>
