--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/main-view.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/main-view.fxml
@@ -17,67 +17,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="488.0" prefWidth="756.0" style="-fx-background-color: #18181b;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eus.ehu.chismosas.mastodonfx.presentation.MainController">
-   <top>
-      <Pane prefHeight="147.0" prefWidth="756.0" BorderPane.alignment="CENTER">
-         <ImageView id="bellImg" fitHeight="34.0" fitWidth="113.0" layoutX="-6.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" x="20.0">
-            <Image url="@icons/logo.png" />
-            <effect>
-               <DropShadow offsetX="5.0" offsetY="5.0" />
-            </effect>
-         </ImageView>
-         <Pane layoutX="173.0" maxWidth="1.7976931348623157E308" prefHeight="149.0" prefWidth="368.0" style="-fx-border-color: #000000;">
-            <children>
-               <Button fx:id="followingBtn" layoutX="59.0" layoutY="98.0" mnemonicParsing="false" onAction="#mouseFollowing" prefHeight="16.0" prefWidth="84.0" style="-fx-background-color: #18181b;" text="Following" textFill="WHITE">
-                  <font>
-                     <Font size="15.0" />
-                  </font>
-               </Button>
-               <Button fx:id="followersBtn" layoutX="234.0" layoutY="98.0" mnemonicParsing="false" onAction="#mouseFollowers" style="-fx-background-color: #18181b;" text="Followers" textFill="WHITE">
-                  <font>
-                     <Font size="15.0" />
-                  </font>
-               </Button>
-               <ImageView fx:id="profilePic" fitHeight="50.0" fitWidth="50.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="@icons/user.png" />
-                  </image>
-               </ImageView>
-               <Label fx:id="userNameLabel" layoutX="83.0" layoutY="22.0" text="\@username" textFill="WHITE">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
-               </Label>
-               <Label fx:id="displayNameLabel" layoutX="83.0" layoutY="47.0" text="username" textFill="WHITE">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
-               </Label>
-            </children>
-         </Pane>
-         <TextField fx:id="searcher" disable="true" layoutX="559.0" layoutY="38.0" prefHeight="25.0" prefWidth="180.0" promptText="Search" style="-fx-background-color: #282c37;" />
-         <ToolBar fx:id="settingsBtn" layoutX="21.0" layoutY="63.0" opacity="0.4" prefHeight="39.0" prefWidth="137.0" style="-fx-background-color: #18181b;">
-            <items>
-               <ImageView id="bellImg" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="@icons/settings.png" />
-                  </image>
-               </ImageView>
-               <Label prefHeight="20.0" prefWidth="91.0" text="Settings" textFill="WHITE">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
-                  <padding>
-                     <Insets left="10.0" />
-                  </padding>
-               </Label>
-            </items>
-         </ToolBar>
-         <Line endX="73.5" layoutX="85.0" layoutY="114.0" opacity="0.26" startX="-69.5" stroke="#ababab" />
-      </Pane>
-   </top>
+<BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="488.0" prefWidth="1010.0" style="-fx-background-color: #18181b;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eus.ehu.chismosas.mastodonfx.presentation.MainController">
    <right>
-      <Pane prefHeight="318.0" prefWidth="216.0" style="-fx-border-color: #18181b  #18181b  #18181b #000000;" BorderPane.alignment="CENTER">
+      <Pane prefHeight="318.0" prefWidth="216.0" BorderPane.alignment="CENTER">
          <TextArea fx:id="newToot" disable="true" layoutX="19.0" layoutY="149.0" prefHeight="123.0" prefWidth="179.0" promptText="What are your thoughts?" />
          <Button disable="true" layoutX="131.0" layoutY="286.0" mnemonicParsing="false" style="-fx-background-color: #5c4de3;" text="Publish!" textFill="WHITE">
             <font>
@@ -87,9 +29,9 @@
       </Pane>
    </right>
    <left>
-      <Pane prefHeight="318.0" prefWidth="174.0" style="-fx-border-color: #18181b #000000  #18181b  #18181b;" BorderPane.alignment="CENTER">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="318.0" prefWidth="174.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane layoutX="19.0" layoutY="14.0" prefHeight="302.0" prefWidth="137.0">
+            <GridPane layoutY="-1.0" prefHeight="350.0" prefWidth="174.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -196,7 +138,7 @@
                         </Label>
                      </items>
                   </ToolBar>
-                  <ToolBar fx:id="favsBtn1" disable="true" prefHeight="23.0" prefWidth="137.0" style="-fx-background-color: #18181b;">
+                  <ToolBar fx:id="favsBtn1" disable="true" prefHeight="32.0" prefWidth="158.0" style="-fx-background-color: #18181b;">
                      <items>
                         <ImageView id="bellImg" disable="true" fitHeight="24.0" fitWidth="24.0" opacity="0.25" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -214,8 +156,108 @@
                      </items>
                   </ToolBar>
                </children>
+               <padding>
+                  <Insets left="15.0" right="15.0" />
+               </padding>
             </GridPane>
          </children>
       </Pane>
    </left>
+   <top>
+      <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="139.0" prefWidth="756.0" BorderPane.alignment="CENTER">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="148.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="563.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="359.0" minWidth="10.0" prefWidth="215.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Pane prefHeight="125.0" prefWidth="170.0">
+               <children>
+                  <ImageView id="bellImg" fitHeight="34.0" fitWidth="113.0" layoutX="-6.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" x="20.0">
+                     <effect>
+                        <DropShadow offsetX="5.0" offsetY="5.0" />
+                     </effect>
+                     <image>
+                        <Image url="@icons/logo.png" />
+                     </image>
+                  </ImageView>
+                  <ToolBar fx:id="settingsBtn" layoutX="21.0" layoutY="62.0" opacity="0.4" prefHeight="39.0" prefWidth="137.0" style="-fx-background-color: #18181b;">
+                     <items>
+                        <ImageView id="bellImg" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@icons/settings.png" />
+                           </image>
+                        </ImageView>
+                        <Label prefHeight="20.0" prefWidth="91.0" text="Settings" textFill="WHITE">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                        </Label>
+                     </items>
+                  </ToolBar>
+                  <Line endX="73.5" layoutX="85.0" layoutY="113.0" opacity="0.26" startX="-69.5" stroke="#ababab" />
+               </children>
+            </Pane>
+            <Pane prefHeight="139.0" prefWidth="220.0" GridPane.columnIndex="2">
+               <children>
+                  <TextField fx:id="searcher" disable="true" layoutX="20.0" layoutY="57.0" prefHeight="25.0" prefWidth="176.0" promptText="Search" style="-fx-background-color: #282c37;" />
+               </children>
+            </Pane>
+            <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="139.0" prefWidth="488.0" GridPane.columnIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="222.0" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="47.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ImageView fx:id="profilePic" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowSpan="2">
+                     <image>
+                        <Image url="@icons/user.png" />
+                     </image>
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </ImageView>
+                  <Label fx:id="userNameLabel" text="\@username" textFill="WHITE" GridPane.columnIndex="1" GridPane.valignment="BOTTOM">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="displayNameLabel" text="username" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="followingBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#mouseFollowing" prefHeight="31.0" prefWidth="94.0" style="-fx-background-color: #18181b;" text="Following" textFill="WHITE" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="followersBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#mouseFollowers" style="-fx-background-color: #18181b;" text="Followers" textFill="WHITE" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+            </GridPane>
+         </children>
+      </GridPane>
+   </top>
+   <center>
+      <Pane prefHeight="139.0" prefWidth="355.0" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
