--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
@@ -11,17 +11,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
 
-<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="186.0" prefWidth="385.0" style="-fx-background-color: #18181b;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="186.0" prefWidth="385.0" style="-fx-background-color: #18181b;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="70.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints fillHeight="false" maxHeight="1.7976931348623157E308" minHeight="24.999998092651367" prefHeight="46.33333206176758" vgrow="NEVER" />
         <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="94.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
     </rowConstraints>
-    <HBox alignment="CENTER_LEFT" spacing="5.0" GridPane.columnIndex="1">
+    <HBox alignment="CENTER_LEFT" spacing="5.0" GridPane.columnIndex="1" GridPane.columnSpan="3">
         <opaqueInsets>
             <Insets />
         </opaqueInsets>
@@ -44,33 +46,33 @@
             </font>
         </Label>
     </HBox>
-   <WebView fx:id="content" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+   <WebView fx:id="content" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
       <GridPane.margin>
          <Insets bottom="10.0" right="10.0" />
       </GridPane.margin>
    </WebView>
-   <ImageView fx:id="bookmarkBtn" fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="LEFT" GridPane.rowIndex="2">
+   <ImageView fx:id="bookmarkBtn" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2">
       <GridPane.margin>
          <Insets />
       </GridPane.margin>
       <image>
-         <Image url="@icons/bookmark2.png" />
+         <Image url="@icons/bookmark.png" />
       </image>
    </ImageView>
-   <ImageView fx:id="likeBtn" fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
+   <ImageView fx:id="likeBtn" fitHeight="20.0" fitWidth="20.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
       <image>
          <Image url="@icons/like.png" />
       </image>
       <GridPane.margin>
-         <Insets left="10.0" />
+         <Insets right="50.0" />
       </GridPane.margin>
    </ImageView>
-   <Label fx:id="like" prefHeight="17.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+   <Label fx:id="like" prefHeight="17.0" prefWidth="30.0" text="0" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
       <GridPane.margin>
-         <Insets left="50.0" />
+         <Insets left="30.0" />
       </GridPane.margin>
    </Label>
-   <ImageView fx:id="retweetBtn" fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+   <ImageView fx:id="retweetBtn" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
       <image>
          <Image url="@icons/retweet.png" />
       </image>
@@ -78,12 +80,12 @@
          <Insets right="50.0" />
       </GridPane.margin>
    </ImageView>
-   <Label fx:id="retweet" prefHeight="17.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+   <Label fx:id="retweet" prefHeight="17.0" prefWidth="30.0" text="0" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
       <GridPane.margin>
          <Insets left="30.0" />
       </GridPane.margin>
    </Label>
-   <ImageView fx:id="commentBtn" fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+   <ImageView fx:id="commentBtn" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
       <image>
          <Image url="@icons/comment.png" />
       </image>
@@ -91,9 +93,9 @@
          <Insets right="50.0" />
       </GridPane.margin>
    </ImageView>
-   <Label fx:id="comment" prefHeight="17.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+   <Label fx:id="comment" prefHeight="17.0" prefWidth="30.0" text="0" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
       <GridPane.margin>
-         <Insets right="15.0" />
+         <Insets left="30.0" />
       </GridPane.margin>
    </Label>
    <ImageView fx:id="avatar" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
