Code Inspection and Cleanup

--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account.fxml
@@ -9,36 +9,36 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="148.0" prefWidth="465.0" style="-fx-background-color: #18181b;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="229.0" minWidth="10.0" prefWidth="136.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="332.0" minWidth="10.0" prefWidth="331.0" />
-  </columnConstraints>
-  <rowConstraints>
-      <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="71.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <ImageView fx:id="avatar" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowSpan="2">
-         <image>
-            <Image url="@icons/user.png" />
-         </image>
-      </ImageView>
-      <Label fx:id="displayName" text="Label" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP">
-         <GridPane.margin>
-            <Insets top="5.0" />
-         </GridPane.margin>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Label fx:id="userName" text="\@" textFill="WHITE" GridPane.columnIndex="1" GridPane.valignment="BOTTOM">
-         <GridPane.margin>
-            <Insets bottom="5.0" />
-         </GridPane.margin>
-         <font>
-            <Font name="Inter Regular" size="16.0" />
-         </font>
-      </Label>
-   </children>
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="148.0" prefWidth="465.0"
+          style="-fx-background-color: #18181b;" xmlns="http://javafx.com/javafx/19"
+          xmlns:fx="http://javafx.com/fxml/1">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="229.0" minWidth="10.0" prefWidth="136.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="332.0" minWidth="10.0" prefWidth="331.0"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="71.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES"/>
+    </rowConstraints>
+    <ImageView fx:id="avatar" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"
+               GridPane.halignment="CENTER" GridPane.rowSpan="2">
+        <Image url="@icons/user.png"/>
+    </ImageView>
+    <Label fx:id="displayName" text="Label" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1"
+           GridPane.valignment="TOP">
+        <GridPane.margin>
+          <Insets top="5.0"/>
+        </GridPane.margin>
+        <font>
+          <Font size="16.0"/>
+        </font>
+    </Label>
+    <Label fx:id="userName" text="\@" textFill="WHITE" GridPane.columnIndex="1" GridPane.valignment="BOTTOM">
+        <GridPane.margin>
+          <Insets bottom="5.0"/>
+        </GridPane.margin>
+        <font>
+          <Font name="Inter Regular" size="16.0"/>
+        </font>
+    </Label>
 </GridPane>
